--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,15 @@
-html,
-body {
-  padding: 0;
+* {
+  box-sizing: border-box; }
+
+html {
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px; }
+
+body, p, h1, h2, h3, h4, h5, h6 {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+  padding: 0; }
 
 a {
-  color: inherit;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
+  color: inherit;
+  transition: 0.3s ease-out; }
